<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="10dp">
    <TextView
        android:id="@+id/main_dialog_budget_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_budget"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <ImageView
        android:id="@+id/main_dialog_budget_iv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ih_error"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/main_dialog_budget_tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_dialog_budget_tv1"
        android:layout_marginTop="10dp"
        android:text="@string/moneySignal"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/main_dialog_budget_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_dialog_budget_tv1"
        android:layout_toRightOf="@+id/main_dialog_budget_tv2"
        android:layout_alignBaseline="@+id/main_dialog_budget_tv2"
        android:inputType="numberDecimal"
        android:background="@color/white"
        android:layout_marginLeft="5dp">
        <requestFocus/>
    </EditText>
    <Button
        android:id="@+id/main_dialog_budget_btn_ensure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_dialog_budget_tv2"
        android:layout_marginTop="20dp"
        android:text="@string/ensure"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/desc_ensure_btn_bg"
        android:textColor="@color/white"/>



</RelativeLayout>