<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChartAnalyseActivity"
    android:orientation="vertical"
    android:background="@color/green"
    android:paddingTop="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grey_f3">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/green">
            <ImageView
                android:id="@+id/chart_iv_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/it_back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordsDetails"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/chart_iv_back"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/chart_iv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/it_rili" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="10dp">
            <TextView
                android:id="@+id/chart_tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2022年5月账单"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_out"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/red"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/chart_tv_out"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23.0"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/red"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_in"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/green_01"/>
                <TextView
                    android:id="@+id/chart_tv_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="23.0"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/green_01"/>
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/chart_btn_out"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/outcome"
                android:background="@drawable/tab_selected_bg"
                android:textColor="@color/white"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/chart_btn_in"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/income"
                android:background="@drawable/tab_bg_shape"
                android:layout_weight="1"/>
        </LinearLayout>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/chart_vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"/>
    </LinearLayout>

</LinearLayout>